Fix size on mobile and make some spacing smaller

--- a/css/main.less
+++ b/css/main.less
@@ -626,6 +626,12 @@ a:hover   { color: @hoverColor; }
 
 @media screen and (max-width: 500px)
 {
+    .posts>li {
+        margin-bottom: 4em;
+    }
+    .header {
+        margin-bottom: 20px;
+    }
     .postTitle {
         font-size: 200%;
         line-height: 40px;
